Instancing letters with Cycles render #91986

Closed
opened 2021-10-06 14:06:33 +02:00 by Sergey · 10 comments

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-05 22:29, hash: 26dac33ce1

Short description of error
2021-10-06 13-40-08.mp4

Exact steps for others to reproduce the error
untitled1.blend

  1. Open the file
  2. Switch Viewport shading into render mode
  3. Connect/disconnect output of Vector rotate node to input of Set position node.
**Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-05 22:29, hash: `26dac33ce1` **Short description of error** [2021-10-06 13-40-08.mp4](https://archive.blender.org/developer/F10811061/2021-10-06_13-40-08.mp4) **Exact steps for others to reproduce the error** [untitled1.blend](https://archive.blender.org/developer/F10811076/untitled1.blend) 1. Open the file 2. Switch Viewport shading into render mode 3. Connect/disconnect output of Vector rotate node to input of Set position node.
Author

Added subscriber: @randum

Added subscriber: @randum
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @leesonw

Added subscriber: @leesonw
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

I think I have identified the root cause of the issue. It is a syncing bug in cycles in combination with the new geometry instances.

It happens because not all modified geometry is tagged in BlenderSync::sync_recalc. If it is detected that an object is modified, it only tags the "real" geometry of that data, but not the other geometries that may be part of that object.
In the past the syncing happened correctly in practice, because usually the pointer of a new mesh is different compared to the pointer that is in the geometry_map cache. However, in this file the resulting mesh pointers of two consecutive depsgraph evaluations are the same surprisingly often.

The digit flickering happens because while the same mesh pointers are reused, the mapping between digits and mesh pointers changes somewhat randomly.

I prepared a simple patch that solves the issue for me, but would be good to get some feedback on what the proper way to integrate this into the syncing logic is. Feel free to take over fixing this if that's quicker than explaining me how it should be done.
Patch: P2557.

Setting the priority to high because this bug could make geometry instancing unusable in some scenes.

I think I have identified the root cause of the issue. It is a syncing bug in cycles in combination with the new geometry instances. It happens because not all modified geometry is tagged in `BlenderSync::sync_recalc`. If it is detected that an object is modified, it only tags the "real" geometry of that data, but not the other geometries that may be part of that object. In the past the syncing happened correctly in practice, because usually the pointer of a new mesh is different compared to the pointer that is in the `geometry_map` cache. However, in this file the resulting mesh pointers of two consecutive depsgraph evaluations are the same surprisingly often. The digit flickering happens because while the same mesh pointers are reused, the mapping between digits and mesh pointers changes somewhat randomly. I prepared a simple patch that solves the issue for me, but would be good to get some feedback on what the proper way to integrate this into the syncing logic is. Feel free to take over fixing this if that's quicker than explaining me how it should be done. Patch: [P2557](https://archive.blender.org/developer/P2557.txt). Setting the priority to high because this bug could make geometry instancing unusable in some scenes.
Member

That looks OK I think but I am not super familiar with this code. You should create a diff, the only thing that seems odd is that you depend on the order that the objects arrive and I am not sure that can be guaranteed.

That looks OK I think but I am not super familiar with this code. You should create a diff, the only thing that seems odd is that you depend on the order that the objects arrive and I am not sure that can be guaranteed.
Dalai Felinto changed title from Instancing letters with Cylces render to Instancing letters with Cycles render 2021-11-02 17:24:19 +01:00

This issue was referenced by c7fcc50842

This issue was referenced by c7fcc50842d85664d2b07c32b181951ea7661440
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-11-04 18:32:25 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91986
No description provided.